--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "format-crash-course",
+    "name": "MERN-pet-project",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
